--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Formulario</h1>
   <form class="example-form" [formGroup]="formulario" (submit)="registrar()">
 
     <mat-form-field class="example-full-width" appearance="fill">
